Created wykopolka styles xml

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="status_bar_padding">24dp</dimen>
+    <dimen name="layout_paddding">16dp</dimen>
+    <dimen name="toolbar_title_padding">72dp</dimen>
+    <dimen name="iv_next_padding_right">24dp</dimen>
+    <dimen name="nav_drawer_width">280dp</dimen>
+
 </resources>
