--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!--ui pallete-->
+    <color name="colorPrimary">#ffb033</color>
+    <color name="colorPrimaryDark">#f3ab2c</color>
+    <color name="colorAccent">#4bc5c3</color>
+    <color name="materialBackground">#fcfcfc</color>
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="textColorSecondary">#0079ea</color>
+    <color name="navBackgroundColor">#303030</color>
 </resources>
