--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,17 +8,26 @@
         <item name="android:windowBackground">@color/materialBackground</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
     <style name="AppTheme.Toolbar" parent="@style/ThemeOverlay.AppCompat.Light">
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
     </style>
-    <!--<style name="secondaryTextStyleBold">-->
-        <!--<item name="android:fontFamily">sans-serif-black</item>-->
-        <!--<item name="android:textColor">@color/textColorSecondary</item>-->
-        <!--<item name="android:textStyle">bold</item>-->
-    <!--</style>-->
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/drawerArrowColor</item>
+    </style>
+    <style name="statisticTextStyleBold">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="defTextStyl">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
     <!--<style name="episodieTextStyle">-->
         <!--<item name="android:textColor">@color/textColorPrimary</item>-->
     <!--</style>-->
+
 </resources>
