--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,16 +1,149 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/navBackgroundColor"
     tools:context="pl.hypeapp.wykopolka.ui.fragment.NavigationDrawerFragment">
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimaryDark"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="159dp"
-        android:id="@+id/textView" />
+        android:layout_alignParentStart="true">
+    </FrameLayout>
+
+    <RelativeLayout
+        android:layout_marginTop="@dimen/nav_drawer_margin_top"
+        android:paddingBottom="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/nav_header_height"
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/header">
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            app:srcCompat="@mipmap/ic_launcher"
+            android:id="@+id/iv_avatar"
+            android:layout_above="@+id/tv_username"
+            android:elevation="4dp"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/tv_username"
+            android:text="\@szyna55"
+            android:textColor="@color/textColorPrimary"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_height="24dp"
+            android:layout_alignParentBottom="false"
+            android:layout_above="@+id/rl_statistic"
+            android:textStyle="bold" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/rl_statistic"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:layout_marginTop="8dp">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:id="@+id/ranking"
+                android:gravity="center_vertical"
+                android:layout_toLeftOf="@+id/readed_books"
+                android:layout_width="82dp">
+
+                <TextView
+                    android:text="23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/statistic_position"
+                    android:gravity="center_horizontal"
+                    style="@style/statisticTextStyleBold"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:text="Pozycja w rankingu "
+                    android:layout_width="match_parent"
+                    android:id="@+id/tv_ranking"
+                    android:gravity="center_horizontal"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    style="@style/defTextStyl" />
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:id="@+id/readed_books"
+                android:layout_centerHorizontal="true"
+                android:layout_width="82dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:text="5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/statistic_readed_books"
+                    android:gravity="center_horizontal"
+                    style="@style/statisticTextStyleBold"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:text="Przeczytanych książek "
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_readed_books"
+                    android:gravity="center_horizontal"
+                    android:textSize="12sp"
+                    style="@style/defTextStyl" />
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="82dp"
+                android:layout_height="match_parent"
+                android:id="@+id/added_books"
+                android:gravity="center_vertical"
+                android:layout_toEndOf="@+id/readed_books">
+
+                <TextView
+                    android:text="3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/statistic_added_books"
+                    android:gravity="center_horizontal"
+                    style="@style/statisticTextStyleBold"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:text="Oddanych książek "
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_added_books"
+                    android:gravity="center_horizontal"
+                    android:textSize="12sp"
+                    style="@style/defTextStyl" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/drawer_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header">
+    </android.support.v7.widget.RecyclerView>
+
+
 </RelativeLayout>
