--- a/app/src/main/res/layout/activity_added_books.xml
+++ b/app/src/main/res/layout/activity_added_books.xml
@@ -13,6 +13,15 @@
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/book_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
+            android:layout_marginTop="-2dp">
+        </android.support.v7.widget.RecyclerView>
+
     </RelativeLayout>
 
     <fragment
@@ -23,4 +32,5 @@
         android:layout_gravity="start"
         app:layout="@layout/fragment_navigation_drawer"
         tools:layout="@layout/fragment_navigation_drawer" />
+
 </android.support.v4.widget.DrawerLayout>
