--- a/app/src/main/res/layout/navigation_drawer_row.xml
+++ b/app/src/main/res/layout/navigation_drawer_row.xml
@@ -4,39 +4,53 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+
+    <com.andexert.library.RippleView
+        android:id="@+id/nav_ripple"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        android:id="@+id/row"
-        android:layout_marginBottom="8dp">
+        android:focusableInTouchMode="false"
+        app:rv_color="@color/colorPrimary"
+        app:rv_rippleDuration="150">
 
-        <ImageView
-            android:id="@+id/nav_list_icon"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="16dp"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:layout_height="30dp"
-            android:layout_width="30dp" />
 
-        <TextView
-            android:id="@+id/nav_list_text"
-            style="@style/defTextStyl"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:text="Dashborad"
-            android:textColor="#fcfcfc" />
-    </LinearLayout>
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:duplicateParentState="true"
+            android:orientation="horizontal">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_below="@+id/row"
-        android:background="#50000000"
-        android:layout_height="0.20dp">
+            <ImageView
+                android:id="@+id/nav_list_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="16dp"
+                android:duplicateParentState="true"
+                app:srcCompat="@mipmap/ic_launcher" />
 
-    </FrameLayout>
+            <TextView
+                android:id="@+id/nav_list_text"
+                style="@style/defTextStyl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:duplicateParentState="true"
+                android:text="Dashborad"
+                android:textColor="#fcfcfc" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.20dp"
+            android:layout_below="@+id/row"
+            android:background="#50000000" />
+    </com.andexert.library.RippleView>
 </RelativeLayout>
