Added new dimens

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,8 @@
     <dimen name="nav_drawer_width">280dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="nav_drawer_margin_top">24dp</dimen>
+    <dimen name="book_thumbnail_width">80dp</dimen>
+    <dimen name="book_thumbnail_height">120dp</dimen>
+    <dimen name="def_margin">8dp</dimen>
+    <dimen name="corner_margin">16dp</dimen>
 </resources>
