--- a/app/src/main/res/layout/activity_added_books.xml
+++ b/app/src/main/res/layout/activity_added_books.xml
@@ -8,7 +8,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/cardview_background">
 
         <include
             android:id="@+id/toolbar"
@@ -18,9 +19,7 @@
             android:id="@+id/book_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:layout_marginTop="-2dp">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_below="@+id/toolbar" />
 
     </RelativeLayout>
 
