--- a/app/src/main/res/layout/book_row.xml
+++ b/app/src/main/res/layout/book_row.xml
@@ -24,7 +24,6 @@
                 android:layout_width="@dimen/book_thumbnail_width"
                 android:layout_height="@dimen/book_thumbnail_height"
                 android:layout_margin="@dimen/def_margin"
-                android:adjustViewBounds="false"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/avatar" />
 
@@ -36,7 +35,6 @@
                 android:layout_alignTop="@+id/iv_book_thumbnail"
                 android:layout_marginEnd="@dimen/corner_margin"
                 android:layout_toEndOf="@+id/iv_book_thumbnail"
-                android:text="Hari Pota"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -48,8 +46,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/tv_book_title"
                 android:layout_marginEnd="@dimen/corner_margin"
-                android:layout_toEndOf="@+id/iv_book_thumbnail"
-                android:text="Rowling" />
+                android:layout_toEndOf="@+id/iv_book_thumbnail" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
