--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:buttonStyle">@style/BrandButtonStyle</item>
     </style>
 
     <style name="AppTheme.Toolbar" parent="@style/ThemeOverlay.AppCompat.Light">
@@ -33,6 +35,23 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="cardViewHeaderText">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <!--<item name="android:inputType">textCapWords</item>-->
+    </style>
+
+    <style name="cardViewContentText">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="nicknameOwnStyle">
+        <item name="android:layout_marginLeft">6dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="ExpandedAppBar" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">33sp</item>
         <item name="android:textColor">@android:color/white</item>
@@ -40,7 +59,7 @@
     </style>
 
     <style name="CollapsedAppBar" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -55,6 +74,20 @@
         <item name="pressedTranslationZ">12dp</item>
         <item name="rippleColor">@android:color/white</item>
     </style>
+
+    <style name="single_book_btn_style">
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginLeft">12dp</item>
+        <item name="android:layout_marginRight">12dp</item>
+    </style>
+
+    <style name="single_book_btn_style2">
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginLeft">12dp</item>
+        <item name="android:layout_marginRight">12dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
     <!--<style name="episodieTextStyle">-->
     <!--<item name="android:textColor">@color/textColorPrimary</item>-->
     <!--</style>-->
