Added new dimens and colors values

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,9 +16,13 @@
     <dimen name="book_thumbnail_height">120dp</dimen>
     <dimen name="def_margin">8dp</dimen>
     <dimen name="corner_margin">16dp</dimen>
+    <dimen name="app_bar_layout_height">410dp</dimen>
 
     <dimen name="spacing_xsmall">2dp</dimen>
     <dimen name="spacing_medium">8dp</dimen>
     <dimen name="spacing_large">16dp</dimen>
     <dimen name="spacing_xlarge">32dp</dimen>
+    <dimen name="single_book_card_bottom_margin">2dp</dimen>
+    <dimen name="gradient_cover_height">200dp</dimen>
+
 </resources>
