--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="textColorSecondary">#0079ea</color>
     <color name="navBackgroundColor">#303030</color>
     <color name="drawerArrowColor">#fcfcfc</color>
-    <color name="cardview_background">#F5F5F5</color>
+    <color name="cardview_background">#ffe5e5e5</color>
 </resources>
