--- a/app/src/main/res/menu/menu_single_book.xml
+++ b/app/src/main/res/menu/menu_single_book.xml
@@ -6,7 +6,7 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_action_action_search"
         android:orderInCategory="100"
-        android:title="@string/abc_search_hint"
+        android:title="@string/search_hint"
         app:showAsAction="always" />
 
 </menu>
