--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -32,7 +32,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
+                    android:transitionName="@string/transition_book_cover"
                     app:layout_collapseMode="parallax" />
 
                 <View
@@ -110,8 +111,7 @@
                         android:id="@+id/tv_author"
                         style="@style/CardViewContentText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Ashlee Vance" />
+                        android:layout_height="wrap_content" />
 
                     <View
                         android:layout_width="match_parent"
@@ -131,14 +131,7 @@
                         android:id="@+id/tv_description"
                         style="@style/CardViewContentText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Steve Jobs chciał waszych pieniędzy. Mark Zuckerberg pragnie wam pomóc udostępnić zdjęcia bobasów. Elon Musk zamierza uratować świat przed zagładą.
-
-Wizjoner, geniusz, nieznośny szef, najbardziej zuchwały przedsiębiorca Doliny Krzemowej, jeden z najbogatszych ludzi na ziemi. Człowiek stawiany w jednym szeregu z Thomasem Edisonem, Henrym Fordem i Stevem Jobsem. Każdy start-up w jego rękach zmienia się w złoto.
-
-Stworzył PayPala, koncern samochodowy Tesla Motors, a także SpaceX – firmę wysyłającą prywatne rakiety w kosmos. Muskowi udało się, mimo że jego życie jest niedorzeczne. A może właśnie dlatego.
-Żeby przekonać rząd, że pojawił się nowy gracz w wyścigu kosmicznym, zaparkował rakietę na trawniku przed siedzibą Federalnej Administracji Lotnictwa w Waszyngtonie.
-Gdy po auta Tesli ustawiały się kolejki chętnych, Leonardo DiCaprio błagał Elona o egzemplarz elektrycznego Roadstera. Musk oczywiście odmówił." />
+                        android:layout_height="wrap_content" />
 
                     <View
                         android:layout_width="match_parent"
@@ -158,8 +151,7 @@ Gdy po auta Tesli ustawiały się kolejki chętnych, Leonardo DiCaprio błagał 
                         android:id="@+id/tv_genre"
                         style="@style/CardViewContentText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Biografia" />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
