--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,6 +8,7 @@
         <item name="android:statusBarColor">@color/colorPrimaryDark</item>
         <item name="android:buttonStyle">@style/BrandButtonStyle</item>
         <!--SharedElement Transitions-->
+        <item name="android:windowContentTransitions">true</item>
         <!--<item name="android:windowContentTransitions">true</item>-->
         <!--<item name="android:windowEnterTransition">@transition/slide_from_bottom</item>-->
         <!--<item name="android:windowExitTransition">@transition/explode</item>-->
