--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="navBackgroundColor">#303030</color>
     <color name="drawerArrowColor">#fcfcfc</color>
     <color name="cardview_background">#ffe5e5e5</color>
+
+    <color name="faq_background_1">#96bbb3</color>
+    <color name="faq_background_2">#feb430</color>
 </resources>
