--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -39,7 +39,7 @@
                 android:layout_below="@id/kv_img"
                 android:layout_marginTop="16dp"
                 android:gravity="center_horizontal"
-                android:text="@string/faq_ext"
+                android:text="@string/faq"
                 android:textAllCaps="true"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"
@@ -53,7 +53,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center_horizontal"
-                android:text="@string/najcze_ciej_zadawane_pytania"
+                android:text="@string/faq_most_asked_questions"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
 
