--- a/app/src/main/res/layout/fragment_welcome_login_via_wykop.xml
+++ b/app/src/main/res/layout/fragment_welcome_login_via_wykop.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/welcome_background_how"
+    android:background="@color/welcome_background_login_via"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical">
 
@@ -11,29 +11,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/welcome_how_header" />
+        android:text="@string/welcome_login_via_header" />
 
     <ImageView
-        android:layout_height="120dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/section_2"
-        android:layout_width="150dp" />
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/section_3" />
 
     <TextView
         style="@style/welcomePagerContentStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/welcome_how_content" />
+        android:text="@string/welcome_login_via_content" />
 
     <Button
-        android:id="@+id/btn_open_faq"
+        android:id="@+id/btn_login_via_wykop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="16dp"
-        android:text="@string/welcome_how_button_text" />
+        android:text="@string/welcome_login_via_button_text" />
 
 </LinearLayout>
